@@ -63,15 +63,15 @@ static int dateToTimet(const char * datestr, time_t * secs)
     /* make this noon so the day is always right (as we make this UTC) */
     time.tm_hour = 12;
 
-    time.tm_mday = strtol(chptr, &chptr, 10);
-    if (*chptr) return -1;
+    time.tm_mday = strtol(chptr, &end, 10);
+    if (!(end && *end == '\0')) return -1;
     if (time.tm_mday < 0 || time.tm_mday > lengths[time.tm_mon]) return -1;
 
     /* year */
     if ((chptr = strtok(NULL, " \t\n")) == NULL) return -1;
 
-    time.tm_year = strtol(chptr, &chptr, 10);
-    if (*chptr) return -1;
+    time.tm_year = strtol(chptr, &end, 10);
+    if (!(end && *end == '\0')) return -1;
     if (time.tm_year < 1997 || time.tm_year >= 3000) return -1;
     time.tm_year -= 1900;
 
