@@ -289,7 +289,7 @@ void oldrpmfileFromInfoLine(char * path, char * state, char * str,
     else if (!strcmp(state, "replaced"))
 	fi->state = RPMFILE_STATE_REPLACED;
     else 
-	rpmError(RPMERR_INTERNAL, _("bad file state: "), state);
+	rpmError(RPMERR_INTERNAL, _("bad file state: %s"), state);
 
     infoFromFields(fields, fi);
 
