@@ -64,7 +64,7 @@ char * rpmProblemString(rpmProblem prob) {
 	break;
 
       case RPMPROB_DISKSPACE:
-	sprintf(buf, _("installing package %s-%s-%s needs %d%c on the %s"
+	sprintf(buf, _("installing package %s-%s-%s needs %ld%c on the %s"
 		       " filesystem"), name, version, release, 
 		       prob.ulong1 > (1024*1024) ? 
 			(prob.ulong1 + 1024 * 1024 - 1) / (1024 * 1024) :
